Add calculation of svm segmentation's feature vector

--- a/RetinalVessel/RetinalVessel/RetinalVessel.csproj
+++ b/RetinalVessel/RetinalVessel/RetinalVessel.csproj
@@ -49,6 +49,8 @@
     <Compile Include="PointsPair.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SVMFeatures.cs" />
+    <Compile Include="VesselSegmentatioMethod.cs" />
     <Compile Include="VesselSegmentator.cs" />
   </ItemGroup>
   <ItemGroup>
