--- a/RetinalVessel/PrepareSVMLearningDataSet/PrepareSVMLearningDataSet.csproj
+++ b/RetinalVessel/PrepareSVMLearningDataSet/PrepareSVMLearningDataSet.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9F8F98FE-933A-4CC4-A4CD-6C75AE1BDFD4}</ProjectGuid>
+    <ProjectGuid>{C6DDF784-5EC8-4679-B131-4EF5A3D0B32F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>RetinalVessel</RootNamespace>
-    <AssemblyName>RetinalVessel</AssemblyName>
+    <RootNamespace>PrepareSVMLearningDataSet</RootNamespace>
+    <AssemblyName>PrepareSVMLearningDataSet</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,18 +44,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BitmapWriter.cs" />
-    <Compile Include="CanalType.cs" />
-    <Compile Include="PointsPair.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SVMFeatures.cs" />
-    <Compile Include="VesselSegmentatioMethod.cs" />
-    <Compile Include="VesselSegmentator.cs" />
-    <Compile Include="VesselSegmentatorConstructorHelper.cs" />
+    <Compile Include="RandomPixelSelector.cs" />
+    <Compile Include="SVMDatasetCreator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RetinalVessel\RetinalVessel.csproj">
+      <Project>{9F8F98FE-933A-4CC4-A4CD-6C75AE1BDFD4}</Project>
+      <Name>RetinalVessel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
